# covan

./: .gitignore  LICENSE  README.md  pyproject.toml
src/covan/: cli.py  coverage.py
src/covan/conf/: settings.py
