[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Klaus Zimmermann", email = "klaus.zimmermann@quansight.com"}]
dependencies = []
description = "A coverage analyzer"
license = {"file" = "LICENSE"}
name = "covan"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.9"
version = "0.1.0"

[project.scripts]
covan = "covan.cli:app"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
covan = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
typer = ">=0.12.5,<0.13"
pip = ">=24.3.1,<25"
pydantic = ">=2.9.2,<3"
pydantic-settings = ">=2.6.1,<3"
coverage = ">=7.6.4,<8"
pandas = ">=2.2.3,<3"

[tool.ruff]
exclude = [".venv", "./covan/_version.py"]
line-length = 120

# [tool.setuptools.dynamic]
# readme = {file = ["README.md"]}

# [tool.setuptools.package-data]
# covan = ["py.typed"]

# [tool.setuptools.packages]
# find = {}

# [tool.setuptools_scm]
# fallback_version = "0.0.0-dev"
# write_to = "covan/_version.py"